style: windows/linux caption buttons

--- a/src/SourceGit/Views/CaptionButtons.axaml
+++ b/src/SourceGit/Views/CaptionButtons.axaml
@@ -7,17 +7,15 @@
              xmlns:vm="using:SourceGit.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.CaptionButtons">
-  <Grid Classes="caption_button_box">
-    <StackPanel Orientation="Horizontal">
-      <Button Classes="caption_button" Click="MinimizeWindow">
-        <Path Data="{StaticResource Icons.Window.Minimize}"/>
-      </Button>
-      <Button Classes="caption_button" Click="MaximizeOrRestoreWindow">
-        <Path Data="{Binding $parent[Window].WindowState, Converter={x:Static c:WindowStateConverters.ToMaxOrRestoreIcon}}"/>
-      </Button>
-      <Button Classes="caption_button" Click="CloseWindow">
-        <Path Data="{StaticResource Icons.Window.Close}"/>
-      </Button>
-    </StackPanel>
-  </Grid>
+  <StackPanel Orientation="Horizontal">
+    <Button Classes="caption_button" Click="MinimizeWindow">
+      <Path Data="{StaticResource Icons.Window.Minimize}"/>
+    </Button>
+    <Button Classes="caption_button" Click="MaximizeOrRestoreWindow">
+      <Path Data="{Binding $parent[Window].WindowState, Converter={x:Static c:WindowStateConverters.ToMaxOrRestoreIcon}}"/>
+    </Button>
+    <Button Classes="caption_button" Click="CloseWindow">
+      <Path Data="{StaticResource Icons.Window.Close}" Width="9" Height="9"/>
+    </Button>
+  </StackPanel>
 </UserControl>
