style: increase all GridSplitter's size

--- a/src/SourceGit/Views/CommitChanges.axaml
+++ b/src/SourceGit/Views/CommitChanges.axaml
@@ -11,7 +11,7 @@
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="256" MinWidth="200" MaxWidth="480"/>
-      <ColumnDefinition Width="1"/>
+      <ColumnDefinition Width="4"/>
       <ColumnDefinition Width="*"/>
     </Grid.ColumnDefinitions>
 
@@ -152,11 +152,11 @@
     </Grid>
 
     <GridSplitter Grid.Column="1"
-                  Width="1" MinWidth=".5"
-                  HorizontalAlignment="Center" VerticalAlignment="Stretch"
+                  MinWidth="1"
+                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                   Background="Transparent"/>
 
-    <Grid Grid.Column="2" Margin="4,0,0,0">
+    <Grid Grid.Column="2">
       <Border BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}">
         <StackPanel Orientation="Vertical" VerticalAlignment="Center">
           <Path Width="64" Height="64" Data="{StaticResource Icons.Diff}" Fill="{DynamicResource Brush.FG2}"/>
