--- a/src/SourceGit/Views/Repository.axaml
+++ b/src/SourceGit/Views/Repository.axaml
@@ -27,12 +27,12 @@
               <MenuFlyout Placement="BottomEdgeAlignedLeft" VerticalOffset="-8">
                 <MenuItem Header="{DynamicResource Text.Repository.Fleet}" Command="{Binding OpenInFleet}">
                   <MenuItem.Icon>
-                    <Image Source="/Resources/ExternalToolIcons/fleet.png" Width="13" Height="13" />
+                    <Image Source="/Resources/ExternalToolIcons/fleet.png" Width="16" Height="16" RenderOptions.BitmapInterpolationMode="HighQuality"/>
                   </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem Header="{DynamicResource Text.Repository.VSCode}" Command="{Binding OpenInVSCode}">
                   <MenuItem.Icon>
-                    <Image Source="/Resources/ExternalToolIcons/vscode.png" Width="13" Height="13" />
+                    <Image Source="/Resources/ExternalToolIcons/vscode.png" Width="16" Height="16" RenderOptions.BitmapInterpolationMode="HighQuality"/>
                   </MenuItem.Icon>
                 </MenuItem>
               </MenuFlyout>
