--- a/src/SourceGit/Views/DiffView.axaml
+++ b/src/SourceGit/Views/DiffView.axaml
@@ -130,7 +130,8 @@
                 <Border BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}" Margin="8">
                   <v:ImageDiffView Alpha="{Binding #ImageDiffSlider.Value}"
                                    OldImage="{Binding Old}"
-                                   NewImage="{Binding New}"/>
+                                   NewImage="{Binding New}"
+                                   RenderOptions.BitmapInterpolationMode="HighQuality"/>
                 </Border>                
               </Border>
 
