--- a/src/SourceGit/Views/About.axaml
+++ b/src/SourceGit/Views/About.axaml
@@ -64,9 +64,10 @@
              Width="200" Height="200"
              Margin="8,0"
              Source="/App.ico"
-             HorizontalAlignment="Center"/>
+             HorizontalAlignment="Center"
+             VerticalAlignment="Center"/>
 
-      <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,20,32,0">
+      <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,8,32,8">        
         <StackPanel Height="48" Orientation="Horizontal">
           <TextBlock Classes="bold" Text="SourceGit" FontSize="32" />
           <Border Margin="12,0,0,0" Height="20" CornerRadius="10" Background="{DynamicResource Brush.Accent1}" Effect="drop-shadow(0 0 6 #40000000)">
@@ -74,22 +75,26 @@
           </Border>
         </StackPanel>
 
-        <TextBlock Margin="2,0,0,0" Text="{DynamicResource Text.About.Copyright}" Foreground="{DynamicResource Brush.FG2}"/>
+        <TextBlock Margin="2,0,0,0" Text="{DynamicResource Text.About.SubTitle}" FontSize="16"/>
 
-        <StackPanel Orientation="Vertical" Margin="0,28,0,0">
+        <TextBlock Margin="2,8,0,0" Text="{DynamicResource Text.About.Copyright}" Foreground="{DynamicResource Brush.FG2}"/>
+
+        <StackPanel Orientation="Vertical" Margin="0,24,0,0">
           <StackPanel Orientation="Horizontal" Height="18">
             <TextBlock Text="{DynamicResource Text.About.BuildWith}" />
             <TextBlock Text="Avalonia UI" Cursor="Hand" Foreground="{DynamicResource Brush.Accent1}" TextDecorations="Underline" PointerPressed="OnVisitAvaloniaUI"/>
-          </StackPanel>
-
-          <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
-            <TextBlock Text="{DynamicResource Text.About.Editor}" />
+            <TextBlock Text=" &amp; " />
             <TextBlock Text="AvaloniaEdit" Cursor="Hand" Foreground="{DynamicResource Brush.Accent1}" TextDecorations="Underline" PointerPressed="OnVisitAvaloniaEdit"/>
           </StackPanel>
 
           <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
             <TextBlock Text="{DynamicResource Text.About.Fonts}" />
             <TextBlock Text="JetBrains Mono" Cursor="Hand" Foreground="{DynamicResource Brush.Accent1}" TextDecorations="Underline" PointerPressed="OnVisitJetBrainsMonoFont"/>
+          </StackPanel>
+          
+          <StackPanel Orientation="Horizontal" Height="18" Margin="0,2,0,0">
+            <TextBlock Text="{DynamicResource Text.About.SourceCode}" />
+            <TextBlock Text="Github" Cursor="Hand" Foreground="{DynamicResource Brush.Accent1}" TextDecorations="Underline" PointerPressed="OnVisitSourceCode"/>
           </StackPanel>
         </StackPanel>
       </StackPanel>
