localization: add git command name to locale zh_CN (#41)

--- a/src/SourceGit/Views/Repository.axaml
+++ b/src/SourceGit/Views/Repository.axaml
@@ -60,7 +60,7 @@
             <Path Width="14" Height="14" Data="{StaticResource Icons.Push}"/>
           </Button>
 
-          <Button Classes="icon_button" Width="32" Margin="16,0,0,0" Command="{Binding StashAll}" ToolTip.Tip="{DynamicResource Text.Stashes}">
+          <Button Classes="icon_button" Width="32" Margin="16,0,0,0" Command="{Binding StashAll}" ToolTip.Tip="{DynamicResource Text.Stash}">
             <Path Width="14" Height="14" Data="{StaticResource Icons.Stashes}"/>
           </Button>
 
