--- a/src/SourceGit/Views/Welcome.axaml
+++ b/src/SourceGit/Views/Welcome.axaml
@@ -11,12 +11,12 @@
   <Grid RowDefinitions="36,*,36" Background="{DynamicResource Brush.Window}">
     <Border Grid.Row="0" BorderBrush="{DynamicResource Brush.Border0}" BorderThickness="0,0,0,1" Background="{DynamicResource Brush.ToolBar}">
       <StackPanel Orientation="Horizontal" Margin="4,0,0,0">
-        <Button Classes="icon_button" Width="32" Click="OpenLocalRepository" ToolTip.Tip="{DynamicResource Text.Welcome.OpenOrInit}">
-          <Path Width="15" Height="13" Data="{StaticResource Icons.Folder.Open}"/>
-        </Button>
-
         <Button Classes="icon_button" Width="32" Command="{Binding Clone}" CommandParameter="{Binding $parent[v:Launcher].DataContext}" ToolTip.Tip="{DynamicResource Text.Welcome.Clone}">
           <Path Width="13" Height="13" Data="{StaticResource Icons.Pull}"/>
+        </Button>
+
+        <Button Classes="icon_button" Width="32" Click="OpenLocalRepository" ToolTip.Tip="{DynamicResource Text.Welcome.OpenOrInit}">
+          <Path Width="16" Height="16" Data="{StaticResource Icons.Folder.Add2}" Margin="0,4,0,0"/>
         </Button>
 
         <Button Classes="icon_button" Width="32" Command="{Binding OpenTerminal}" ToolTip.Tip="{DynamicResource Text.Welcome.OpenTerminal}">
